@@ -88,6 +88,7 @@
             // 
             // ErrorDialogue
             // 
+            this.AcceptButton = this.error_close;
             this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.ClientSize = new System.Drawing.Size(450, 215);
