@@ -121,7 +121,7 @@
   <data name="error_icon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfcBBwPFwkxZEMc
+        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfcBBwPFwkxZEMc
         AAAT/0lEQVRoQ8WaB3SU5baGQ0eK0iJVRVFABayosdBDF88Rl+JVuUSPiKIBUVQQ6SV10jPpyaRNymR6
         n8kkk0zKZNJDEwVULpCjIhDLUdF/n3f/MxOD5V5kXe/NWnv9M5OZ5Nnv9+797e9PAgL+5FfImjUBBfn5
         PT/VS6lQDqmvc48uLJBPz87O+XuZQhkqLyzZmZ9XuKdIXvpeXm5BiFSaMtugN91kMpqHvxEa2r/nD1i8
